@@ -2,7 +2,6 @@
 <div data-role="header" data-position="fixed">
     <a href="javascript: history.go(-1);" data-icon="back" data-rel="back" data-direction="reverse">Back</a>
     <h1>[[+title]] :: HandyMan</h1>
-    <a href="[[+baseUrl]]" data-icon="home" data-transition="flip">Home</a>
 </div>
 <div data-role="content">
     [[+content]]
@@ -11,7 +10,7 @@
 <div data-role="footer" data-position="fixed">
     <div data-role="navbar">
     <ul>
-        <li><a href="[[+baseUrl]]?hma=resource/create" id="create" data-icon="custom">Create Resource</a></li>
+        <li><a href="[[+baseUrl]]" id="nav-home" data-icon="custom" data-transition="flip">Home</a></li>
         <li><a href="[[+baseUrl]]?hma=resource/list" id="manage" data-icon="custom">Manage Resources</a></li>
         <li><a href="[[+baseUrl]]?hma=logout" id="logout" data-icon="custom">Logout</a></li>
     </ul>
